fix mobile overflow issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@
 
 html {
   font-family: var(--font-montserrat);
+  overflow-x: hidden;
 }
 
 body {
